--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-autostart": "~2",
     "@tauri-apps/plugin-clipboard-manager": "^2.2.2",
+    "@tauri-apps/plugin-os": "^2.2.1",
     "highlight.js": "^11.11.1",
     "tauri-plugin-clipboard-api": "^2.1.11"
   }
