--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,3 +34,7 @@ enigo = "0.3.0"
 winapi = "0.3.9"
 windows = {version = "0.61.1", features= ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
 unicode-segmentation = "1.12.0"
+tauri-plugin-os = "2.2.1"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-autostart = "2"
