--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-autostart": "~2",
     "@tauri-apps/plugin-clipboard-manager": "^2.2.2",
+    "@tauri-apps/plugin-opener": "~2",
     "@tauri-apps/plugin-os": "^2.2.1",
     "highlight.js": "^11.11.1",
     "tauri-plugin-clipboard-api": "^2.1.11"
