--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,7 @@ winapi = "0.3.9"
 windows = {version = "0.61.1", features= ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
 unicode-segmentation = "1.12.0"
 tauri-plugin-os = "2.2.1"
+tauri-plugin-opener = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
