--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,7 @@ windows = {version = "0.61.1", features= ["Win32_Foundation", "Win32_UI", "Win32
 unicode-segmentation = "1.12.0"
 tauri-plugin-os = "2.2.1"
 tauri-plugin-opener = "2"
+regex = "1.11.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
