--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "TactiClip"
-version = "0.1.0"
+version = "0.2.0"
 description = "Lightweight and powerful clipboard manager"
 authors = ["PetchouDev"]
-license = ""
-repository = ""
-edition = "2021"
-rust-version = "1.77.2"
+license = "BSD-4-Clause license"
+repository = "https://github.com/PetchouDev/TactiClip"
+edition = "2024"
+rust-version = "1.86.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
